gave it the minimalist look

--- a/Table2.html
+++ b/Table2.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>1-8 Puzzle</title>
+    <link rel="stylesheet" type="text/css" href="CSS/table.css">
 
 </head>
 <body>
 <table id="tableID" style="cursor: pointer;">
     <tr>
-        <th>Head 1</th>
-        <th>Head 2</th>
-        <th>Head 3</th>
+        <th> </th>
+        <th> </th>
+        <th> </th>
     </tr>
     <tr>
         <td>1</td>
