--- a/Table2.html
+++ b/Table2.html
@@ -28,6 +28,9 @@
         <td>6</td>
         <td>5</td>
     </tr>
+    <tr>
+        <td>reset</td>
+    </tr>
 </table>
 <script src="scripts/script_table.js"></script>
 
